[package]
name = "rcell"
description = "A Cell which can hold either an Arc or an Weak smartpointer"
version = "0.1.0"
readme = "README.md"
license = "MIT OR Apache-2.0"
authors = ["Christian Thäter <ct@pipapo.org>"]
repository = "https://github.com/cehteh/rcell.git"
documentation = "http://docs.rs/rcell"
edition = "2021"
keywords = ["arc", "cell"]
categories = ["concurrency", "memory-management"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.11"
