[package]
name = "rcell"
description = "A Cell which can hold either an Arc or an Weak smartpointer"
version = "2.0.0-pre1"
readme = "README.md"
license = "MIT OR Apache-2.0"
authors = ["Christian Thäter <ct@pipapo.org>"]
repository = "https://github.com/cehteh/rcell.git"
documentation = "http://docs.rs/rcell"
edition = "2021"
keywords = ["arc", "cell"]
categories = ["concurrency", "memory-management"]

[dependencies]
sharded_mutex = "0.9.0"
